# minirm

./: .coverage  .gitignore  README.md  Todo.md  image.excalidraw  main.py  pyproject.toml
.minirm/: db.sqlite3
app/: constant.py  main.py  styles.py  utils.py
app/cli/: __init__.py  destroy.py  docs.py  init.py  qa.py  query.py  refresh.py
app/components/: __init__.py  console.py  schema.py  sidebar.py  sql.py  topics.py
app/db/: __init__.py  engin.py  init.py  seed.py  utils.py
app/db/sql/: schema.sql
app/panels/: __init__.py  console.py  schema.py  sidebar.py  sql.py  topics.py
app/qa/: question.json
app/questions/: __init__.py  registry.py  runner.py  schema.py
app/questions/easy/: count_users.py  count_users_by_city.py  find_user_by_id.py  order_users_by_age.py  products_by_price.py  products_under_5000.py  select_all_users.py  top_5_users.py  users_from_india.py  users_older_than_25.py
app/questions/hard/: employees_with_managers.py  products_never_ordered.py  top_3_spending_users.py
app/questions/medium/: avg_order_quantity_by_status.py  avg_salary_by_dept.py  (+6 more)
app/tui/: ui.py
app/ui/: styles.py  ui.py
app/utils/: handle_config_file.py  table.py
app/widgets/: __init__.py  question.py  schema.py
db/: init.py  seed.py
db/sql/: data.sql  seed.sql
tests/: test_constant.py  test_db_constraints.py  test_db_engin.py  test_db_seed.py  test_db_utils.py  test_integration.py  test_questions_registry.py  test_questions_runner.py  test_questions_schema.py  test_schema.py  test_utils.py
tests/cli/: test_destroy.py  test_init.py
