[project]
name = "squilio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
development = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
