[project]
name = "squilio"
version = "0.1.0"
description = "A simple sql practicing tui build using python and textual"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "test",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
development = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
squilio = "app.main:main"
